--- a/styles.css
+++ b/styles.css
@@ -202,7 +202,7 @@ color: black;
 @media (max-width: 400px) {
     .social {
         font-size: smaller;
-        width: 200%;
+        overflow: visible;
     }
 }
 
