--- a/styles.css
+++ b/styles.css
@@ -204,6 +204,7 @@ color: black;
         font-size: smaller;
         overflow: visible;
         display: inline-flex;
+        margin-left: 3%;
     }
 }
 
