--- a/styles.css
+++ b/styles.css
@@ -203,8 +203,7 @@ color: black;
     .social {
         font-size: smaller;
         overflow: visible;
-        display: inline-flex;
-        padding-left: 6%;
+        display: inline-block
     }
 }
 
