--- a/styles.css
+++ b/styles.css
@@ -201,7 +201,7 @@ color: black;
 
 @media (max-width: 400px) {
     .social {
-        flex-shrink: 3;
+        visibility: hidden;
         
     }
 }
